GOWL-03: New LeaguesBOApi and apply little fixes to compile other services OK.